--- a/app/src/main/res/drawable/button_bg.xml
+++ b/app/src/main/res/drawable/button_bg.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners android:radius="20dp"/>
-   <solid android:color="@color/purple_200"/>
+   <solid android:color="@color/browser_actions_bg_grey"/>
 
 </shape>
