--- a/app/src/main/res/layout/course_item.xml
+++ b/app/src/main/res/layout/course_item.xml
@@ -31,7 +31,7 @@
 
         <ImageView
             android:id="@+id/image"
-            android:layout_width="300dp"
+            android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_gravity="center|top"
             android:src="@drawable/icon"
