--- a/app/src/main/res/layout/child_item.xml
+++ b/app/src/main/res/layout/child_item.xml
@@ -4,9 +4,11 @@
     android:layout_height="wrap_content">
 
     <ImageView
+        android:layout_marginRight="5dp"
         android:id="@+id/image_child"
         android:layout_width="wrap_content"
         android:layout_height="100dp"
+        android:scaleType="fitXY"
         android:src="@mipmap/ic_launcher"
         />
 
